Fix broken layout in contest settings for smaller devices

--- a/judgels-frontends/raphael/src/routes/uriel/contests/single/announcements/ContestAnnouncementCreateDialog/ContestAnnouncementCreateDialog.scss
+++ b/judgels-frontends/raphael/src/routes/uriel/contests/single/announcements/ContestAnnouncementCreateDialog/ContestAnnouncementCreateDialog.scss
@@ -6,3 +6,15 @@
 .contest-announcement-create-dialog-body {
   height: 570px;
 }
+
+// This is to compensate the increase in toolbar height
+
+@media only screen and (max-width: 600px) {
+  .contest-announcement-create-dialog {
+    height: 750px;
+  }
+
+  .contest-announcement-create-dialog-body {
+    height: 620px;
+  }
+}
